# cargo-lambda

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  LICENSE  Makefile  PR_draft.md  README.md  cargo-lambda.nuspec  deny.toml  pyproject.toml
.config/: nextest.toml
.github/: FUNDING.yml
.github/actions/choco/: entrypoint.sh
.github/workflows/: Release.yml  build.yml  comment.yml  docs.yml  format-comment.yml  format.yml  lock.yml  pages.yml  release.yml  test-docker.yml  test-docs.yml
crates/cargo-lambda-build/: Cargo.toml  README.md
crates/cargo-lambda-build/src/: archive.rs  error.rs  lib.rs  target_arch.rs  toolchain.rs  zig.rs
crates/cargo-lambda-build/src/compiler/: cargo.rs  cargo_zigbuild.rs  cross.rs  mod.rs
crates/cargo-lambda-cli/: Cargo.toml  build.rs  pyproject.toml
crates/cargo-lambda-cli/integration-tests/harness/: mod.rs
crates/cargo-lambda-cli/src/: error_reporting.rs  main.rs  telemetry.rs
crates/cargo-lambda-cli/tests/: cargo_lambda.rs  harness.rs  lambda_build.rs
crates/cargo-lambda-cli/tests/harness/: mod.rs  project.rs
crates/cargo-lambda-deploy/: Cargo.toml  README.md
crates/cargo-lambda-deploy/src/: dry.rs  extensions.rs  functions.rs  lib.rs  roles.rs
crates/cargo-lambda-interactive/: Cargo.toml  README.md
crates/cargo-lambda-interactive/src/: command.rs  lib.rs  progress.rs
crates/cargo-lambda-invoke/: Cargo.toml  README.md
crates/cargo-lambda-invoke/src/: error.rs  lib.rs
crates/cargo-lambda-metadata/: Cargo.toml  README.md
crates/cargo-lambda-metadata/src/: cargo.rs  config.rs  env.rs  error.rs  lambda.rs  lib.rs
crates/cargo-lambda-metadata/src/cargo/: build.rs  deploy.rs  mod.rs  profile.rs  watch.rs
crates/cargo-lambda-metadata/src/fs/: copy.rs  mod.rs  rename.rs  rename_linux.rs
crates/cargo-lambda-metadata/tests/: jail.rs
crates/cargo-lambda-new/: Cargo.toml  README.md
crates/cargo-lambda-new/src/: error.rs  events.rs  extensions.rs  functions.rs  lib.rs  template.rs
crates/cargo-lambda-new/src/template/: config.rs
crates/cargo-lambda-remote/: Cargo.toml  README.md
crates/cargo-lambda-remote/src/: lib.rs  tls.rs
crates/cargo-lambda-remote/test-data/: aws_config  aws_credentials
crates/cargo-lambda-system/: Cargo.toml  README.md
crates/cargo-lambda-system/src/: lib.rs
crates/cargo-lambda-watch/: Cargo.toml  README.md
crates/cargo-lambda-watch/src/: error.rs  eventstream.rs  instance_pool.rs  lib.rs  requests.rs  runtime_router.rs  scheduler.rs  state.rs  trace.rs  trigger_router.rs  watch_installer.rs  watcher.rs
crates/cargo-lambda-watch/src/runtime/: extensions_router.rs  functions_router.rs  mod.rs
crates/cargo-lambda-watch/src/watcher/: ignore.rs
docs/: index.md  package.json  pnpm-lock.yaml
docs/.vitepress/: config.js
docs/.vitepress/theme/: custom.css
docs/commands/: build.md  deploy.md  init.md  introduction.md  invoke.md  new.md  system.md  watch.md
docs/components/: PlatformInstallation.vue  SystemMessage.vue
docs/guide/: automating-deployments.md  configuration.md  cross-compiling.md  getting-started.md  installation.md  lambda-extensions.md  release-optimizations.md  screencasts.md  what-is-cargo-lambda.md
docs/public/: install.ps1  install.sh
npm/: cargo-lambda.js  index.js  install.js  npm-shrinkwrap.json  package.json  postinstall.js  prepare.js  reinstall.js  uninstall.js
src/: build.rs  command.rs  invoke.rs  main.rs  metadata.rs  progress.rs  start.rs  toolchain.rs  zig.rs
src/start/: mod.rs  requests.rs  scheduler.rs  trace.rs
src/utils/: mod.rs
test/: integration.rb
test/fixtures/mixed-workspace-package/crates/crate-2/: Cargo.toml
test/fixtures/mixed-workspace-package/src/: lib.rs
test/fixtures/multi-binary-package/: Cargo.toml
test/fixtures/single-binary-package/: Cargo.toml
test/fixtures/single-binary-package/src/: main.rs
test/fixtures/target-dir-set-in-project/.cargo/: config
test/fixtures/target-dir-set-in-project/src/: main.rs
test/fixtures/workspace-package/: Cargo.toml
tests/binaries/: binary-arm64  binary-x86-64
tests/cargo-lambda/: Cargo.toml
tests/cargo-lambda/test/: lambda_build.rs  main.rs
tests/certs/: ca.pem  key.pem
tests/fixtures/config-with-context/: Cargo.toml  CargoLambda.toml  README.md
tests/fixtures/config-with-context/src/: http_handler.rs  main.rs
tests/fixtures/events/: example-apigw-request.json
tests/fixtures/examples-package/: Cargo.toml
tests/fixtures/missing-binary-package/: Cargo.toml
tests/fixtures/mixed-workspace-package/: Cargo.toml
tests/fixtures/mixed-workspace-package/crates/crate-1/: Cargo.toml
tests/fixtures/mixed-workspace-package/crates/crate-1/src/: main.rs
tests/fixtures/multi-binary-package/: Cargo.toml
tests/fixtures/package-with-global-config/: Cargo.toml  CargoLambda.toml  README.md
tests/fixtures/package-with-global-config/src/: generic_handler.rs  main.rs
tests/fixtures/single-binary-different-name/: Cargo.toml
tests/fixtures/single-binary-package/: Cargo.toml
tests/fixtures/single-binary-package-build-include/: Cargo.toml
tests/fixtures/target-dir-set-in-project/: Cargo.toml
tests/fixtures/watch-multi-binary/: Cargo.toml
tests/fixtures/workspace-package/: Cargo.toml
tests/fixtures/workspace-package/crate-1/: Cargo.toml
tests/fixtures/workspace-package/crate-2/: Cargo.toml
tests/fixtures/workspace-package/crate-3/: Cargo.toml
tests/fixtures/workspace-with-package-config/: Cargo.toml
tests/fixtures/workspace-with-package-config/package-1/: Cargo.toml
tests/templates/config-template/: CargoLambda.toml
tests/templates/config-template/template/: Cargo.toml  render-test.json
tests/templates/config-template/template/src/: main.rs
tests/templates/extension-template/: Cargo.toml
tests/templates/extension-template/src/: main.rs
