[workspace]
members = [
    "crates/cargo-lambda-build",
    "crates/cargo-lambda-cli",
    "crates/cargo-lambda-deploy",
    "crates/cargo-lambda-interactive",
    "crates/cargo-lambda-invoke",
    "crates/cargo-lambda-metadata",
    "crates/cargo-lambda-new",
    "crates/cargo-lambda-remote",
    "crates/cargo-lambda-watch",
]

exclude = [
    "tests/fixtures/single-binary-package",
    "tests/fixtures/mixed-workspace-package",
    "tests/fixtures/missing-binary-package",
    "tests/fixtures/multi-binary-package",
    "tests/fixtures/target-dir-set-in-project",
    "tests/fixtures/workspace-package",
]

[workspace.package]
version = "0.17.1"
authors = ["David Calavera"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/cargo-lambda/cargo-lambda"
repository = "https://github.com/cargo-lambda/cargo-lambda"
keywords = ["cargo", "subcommand", "aws", "lambda"]
description = "Cargo subcommand to work with AWS Lambda"
rust-version = "1.64.0"

[workspace.dependencies]
aws-config = "0.53.0"
aws-sdk-iam = "0.23.0"
aws-sdk-lambda = "0.23.0"
aws-sdk-s3 = "0.23.0"
aws-sdk-sts = "0.23.0"
aws-smithy-types = "0.53.0"
aws-types = "0.53.0"
cargo-lambda-build = { version = "0.17.1", path = "crates/cargo-lambda-build" }
cargo-lambda-deploy = { version = "0.17.1", path = "crates/cargo-lambda-deploy" }
cargo-lambda-interactive = { version = "0.17.1", path = "crates/cargo-lambda-interactive" }
cargo-lambda-invoke = { version = "0.17.1", path = "crates/cargo-lambda-invoke" }
cargo-lambda-metadata = { version = "0.17.1", path = "crates/cargo-lambda-metadata" }
cargo-lambda-new = { version = "0.17.1", path = "crates/cargo-lambda-new" }
cargo-lambda-remote = { version = "0.17.1", path = "crates/cargo-lambda-remote" }
cargo-lambda-watch = { version = "0.17.1", path = "crates/cargo-lambda-watch" }
clap = { version = "4", features = ["derive"] }
dunce = "1.0.3"
home = "0.5.3"
miette = { version = "4.7.1" }
reqwest = { version = "0.11.10", default-features = false, features = [
    "rustls-tls",
] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
strum = "0.24.0"
strum_macros = "0.24.0"
thiserror = "1.0.31"
tokio = { version = "1.18.2" }
tracing = { version = "0.1.35", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.1.2", features = ["v4"] }
which = "4.2.5"
zip = { version = "0.6.2", features = ["bzip2", "deflate", "time"] }

[profile.release]
strip = "symbols"
