[workspace]
members = [
    "crates/cargo-lambda-build",
    "crates/cargo-lambda-cli",
    "crates/cargo-lambda-deploy",
    "crates/cargo-lambda-interactive",
    "crates/cargo-lambda-invoke",
    "crates/cargo-lambda-metadata",
    "crates/cargo-lambda-new",
    "crates/cargo-lambda-remote",
    "crates/cargo-lambda-watch",
]

exclude = [
    "tests/fixtures/single-binary-package",
    "tests/fixtures/single-binary-package-build-include",
    "tests/fixtures/mixed-workspace-package",
    "tests/fixtures/missing-binary-package",
    "tests/fixtures/multi-binary-package",
    "tests/fixtures/target-dir-set-in-project",
    "tests/fixtures/workspace-package",
    "tests/fixtures/single-binary-different-name",
    "tests/fixtures/examples-package",
    "tests/fixtures/watch-multi-binary"
]

resolver = "2"

[workspace.package]
version = "1.2.1"
authors = ["David Calavera"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/cargo-lambda/cargo-lambda"
repository = "https://github.com/cargo-lambda/cargo-lambda"
keywords = ["cargo", "subcommand", "aws", "lambda"]
description = "Cargo subcommand to work with AWS Lambda"
rust-version = "1.70.0"

[workspace.dependencies]
aws-config = "1.1.8"
aws-sdk-iam = "1.17.0"
aws-sdk-lambda = "1.17.0"
aws-sdk-s3 = "1.17.0"
aws-sdk-sts = "1.17.0"
aws-smithy-types = "1.1.8"
aws-types = "1.1.8"
base64 = "0.21.2"
cargo-lambda-build = { version = "1.2.1", path = "crates/cargo-lambda-build" }
cargo-lambda-deploy = { version = "1.2.1", path = "crates/cargo-lambda-deploy" }
cargo-lambda-interactive = { version = "1.2.1", path = "crates/cargo-lambda-interactive" }
cargo-lambda-invoke = { version = "1.2.1", path = "crates/cargo-lambda-invoke" }
cargo-lambda-metadata = { version = "1.2.1", path = "crates/cargo-lambda-metadata" }
cargo-lambda-new = { version = "1.2.1", path = "crates/cargo-lambda-new" }
cargo-lambda-remote = { version = "1.2.1", path = "crates/cargo-lambda-remote" }
cargo-lambda-watch = { version = "1.2.1", path = "crates/cargo-lambda-watch" }
clap = { version = "4.4.2", features = ["derive"] }
dunce = "1.0.3"
home = "0.5.3"
miette = { version = "5.10.0" }
reqwest = { version = "0.11.10", default-features = false, features = [
    "rustls-tls-native-roots",
] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
strum = "0.24.0"
strum_macros = "0.24.0"
tempfile = "3.3.0"
thiserror = "1.0.31"
tokio = { version = "1.18.2" }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.5.0", features = ["v4"] }
which = "4.2.5"
zip = { version = "0.6.6", features = ["bzip2", "deflate", "time"] }

[profile.release]
strip = "symbols"
