[workspace]
members = [
    "crates/cargo-lambda-build",
    "crates/cargo-lambda-cli",
    "crates/cargo-lambda-deploy",
    "crates/cargo-lambda-interactive",
    "crates/cargo-lambda-invoke",
    "crates/cargo-lambda-metadata",
    "crates/cargo-lambda-new",
    "crates/cargo-lambda-remote",
    "crates/cargo-lambda-system",
    "crates/cargo-lambda-watch",
]

exclude = [
    "tests/fixtures/single-binary-package",
    "tests/fixtures/single-binary-package-build-include",
    "tests/fixtures/mixed-workspace-package",
    "tests/fixtures/missing-binary-package",
    "tests/fixtures/multi-binary-package",
    "tests/fixtures/target-dir-set-in-project",
    "tests/fixtures/workspace-package",
    "tests/fixtures/single-binary-different-name",
    "tests/fixtures/examples-package",
    "tests/fixtures/watch-multi-binary",
    "tests/fixtures/package-with-global-config",
    "tests/fixtures/config-with-context",
]

resolver = "2"

[workspace.package]
version = "1.6.2"
authors = ["David Calavera"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/cargo-lambda/cargo-lambda"
repository = "https://github.com/cargo-lambda/cargo-lambda"
keywords = ["cargo", "subcommand", "aws", "lambda"]
description = "Cargo subcommand to work with AWS Lambda"
rust-version = "1.80.0"

[workspace.dependencies]
assertables = "9.0.0"
aws-config = "1.5.11"
aws-credential-types = "1.2.1"
aws-sdk-iam = { version ="1.54.0", features = ["behavior-version-latest"] }
aws-sdk-lambda = { version ="1.61.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version ="1.61.0", features = ["behavior-version-latest"] }
aws-sdk-sts = { version ="1.52.0", features = ["behavior-version-latest"] }
aws-smithy-runtime = { version = "1.7.5", features = ["test-util"] }
aws-smithy-types = "1.2.10"
aws-types = "1.3.3"
base64 = "0.21.2"
cargo-lambda-build = { version = "1.6.2", path = "crates/cargo-lambda-build" }
cargo-lambda-deploy = { version = "1.6.2", path = "crates/cargo-lambda-deploy" }
cargo-lambda-interactive = { version = "1.6.2", path = "crates/cargo-lambda-interactive" }
cargo-lambda-invoke = { version = "1.6.2", path = "crates/cargo-lambda-invoke" }
cargo-lambda-metadata = { version = "1.6.2", path = "crates/cargo-lambda-metadata" }
cargo-lambda-new = { version = "1.6.2", path = "crates/cargo-lambda-new" }
cargo-lambda-remote = { version = "1.6.2", path = "crates/cargo-lambda-remote" }
cargo-lambda-system = { version = "1.6.2", path = "crates/cargo-lambda-system" }
cargo-lambda-watch = { version = "1.6.2", path = "crates/cargo-lambda-watch" }
cargo_metadata = "0.15.3"
cargo-options = { version = "0.7.5", features = ["serde"] }
cargo-zigbuild = "0.19.4"
clap = { version = "4.4.2", features = ["derive"] }
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
dirs = "4"
dunce = "1.0.3"
figment = { version = "0.10.19", features = ["env", "test", "toml"] }
home = "0.5.3"
miette = { version = "5.10.0" }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls-native-roots",
] }
rustls = "0.23.17"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
strum = "0.24.0"
strum_macros = "0.24.0"
tempfile = "3.3.0"
thiserror = "1.0.31"
tokio = "1.18.2"
toml = "0.8.19"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.5.0", features = ["v4"] }
which = "4.2.5"
zip = { version = "2.1.0", features = ["bzip2", "chrono", "deflate"] }

[profile.release]
strip = "symbols"
