[package]
name = "cargo-lambda-build"
readme = "README.md"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true

# Use cargo-edit(https://github.com/killercup/cargo-edit#installation)
# to manage dependencies.
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.
[dependencies]
async-trait = "0.1.58"
cargo-lambda-interactive.workspace = true
cargo-lambda-metadata.workspace = true
cargo-options = "0.6.0"
cargo-zigbuild = "0.17.3"
clap.workspace = true
home.workspace = true
miette.workspace = true
object = "0.28.4"
rustc_version = "0.4.0"
sha2 = "0.10.2"
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
toml = "0.7.5"
tracing.workspace = true
which.workspace = true
zip.workspace = true
walkdir = "2.4.0"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
