[package]
name = "cargo-lambda-build"
readme = "README.md"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true

[dependencies]
cargo-lambda-interactive.workspace = true
cargo-lambda-metadata.workspace = true
cargo-options = "0.7.4"
cargo-zigbuild = "0.19.4"
clap.workspace = true
home.workspace = true
miette.workspace = true
object = "0.28.4"
rustc_version = "0.4.0"
sha2 = "0.10.2"
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml = "0.7.5"
tracing.workspace = true
which.workspace = true
zip.workspace = true
walkdir = "2.4.0"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }

[dev-dependencies]
rstest = "0.21.0"
tokio = { workspace = true, features = ["macros", "rt"] }
