[package]
name = "cargo-lambda-build"
readme = "README.md"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true

[dependencies]
cargo-lambda-interactive.workspace = true
cargo-lambda-metadata.workspace = true
cargo-lambda-remote.workspace = true
cargo-options.workspace = true
cargo-zigbuild.workspace = true
chrono.workspace = true
chrono-humanize = "0.2.3"
miette.workspace = true
object = "0.38.1"
rustc_version = "0.4.0"
sha2 = "0.10.2"
serde.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
walkdir = "2.4.0"
which.workspace = true
zip.workspace = true

[dev-dependencies]
assertables.workspace = true
rstest = "0.26.1"
tokio = { workspace = true, features = ["macros", "rt"] }
