[package]
name = "cargo-lambda"
readme = "../../README.md"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true

[dependencies]
cargo-lambda-build.workspace = true
cargo-lambda-deploy.workspace = true
cargo-lambda-invoke.workspace = true
cargo-lambda-metadata.workspace = true
cargo-lambda-new.workspace = true
cargo-lambda-system.workspace = true
cargo-lambda-watch.workspace = true
clap = { workspace = true, features = ["suggestions"] }
clap-cargo = "0.12.0"
miette = { workspace = true, features = ["fancy"] }
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber.workspace = true

[build-dependencies]
build-data = "0.1"

[dev-dependencies]
assertables.workspace = true
dunce = "1.0.3"
serde_json.workspace = true
snapbox = { version = "0.4.3", features = ["cmd", "debug", "path"] }
toml_edit = "0.22.24"
url = "2.5.0"
uuid.workspace = true
walkdir = "2.4.0"
zip.workspace = true

[features]
skip-build-banner = []

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/cargo-lambda-v{ version }.{ target }.tar.gz"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/cargo-lambda-v{ version }.windows-x64.zip"
pkg-fmt = "zip"
