[package]
name = "cargo-lambda-deploy"
description = "Cargo subcommand to work with AWS Lambda"
version = "0.7.2"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cargo-lambda/cargo-lambda"
repository = "https://github.com/cargo-lambda/cargo-lambda"
keywords = ["cargo", "subcommand", "aws", "lambda"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-lambda-build = { version = "0.7.0", path = "../cargo-lambda-build" }
cargo-lambda-interactive = { version = "0.7.0", path = "../cargo-lambda-interactive" }
cargo-lambda-metadata = { version = "0.7.0", path = "../cargo-lambda-metadata" }
cargo-lambda-remote = { version = "0.7.0", path = "../cargo-lambda-remote" }
clap = { version = "3.1.14", features = ["derive"] }
miette = "4.5.0"
strum = "0.24.0"
strum_macros = "0.24.0"
tokio = { version = "1.18.0", default-features = false, features = ["time"]}
