[package]
name = "cargo-lambda-deploy"
readme = "README.md"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true

[dependencies]
aws-sdk-iam.workspace = true
aws-sdk-s3.workspace = true
aws-sdk-sts.workspace = true
aws-smithy-types.workspace = true
cargo-lambda-build.workspace = true
cargo-lambda-interactive.workspace = true
cargo-lambda-metadata.workspace = true
cargo-lambda-remote.workspace = true
miette.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
tokio = { workspace = true, features = ["time"]}
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
assertables.workspace = true
aws-credential-types.workspace = true
aws-smithy-runtime.workspace = true
base64.workspace = true
http = "1.0"
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
