[package]
name = "cargo-lambda-interactive"
readme = "README.md"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true

[dependencies]
indicatif = "0.17.2"
inquire = "0.5.2"
is-terminal = "0.4.0"
miette.workspace = true
tokio = { workspace = true, features = ["process"] }
