[package]
name = "cargo-lambda-invoke"
readme = "README.md"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true

[dependencies]
base64.workspace = true
cargo-lambda-metadata.workspace = true
cargo-lambda-remote.workspace = true
clap.workspace = true
dirs.workspace = true
miette.workspace = true
reqwest = { workspace = true, features = ["rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "test-util"] }
