[package]
name = "cargo-lambda-metadata"
readme = "README.md"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true

[dependencies]
cargo_metadata = "0.15.3"
clap.workspace = true
env-file-reader = "0.3.0"
matchit = "0.8.5"
miette = "4.7.1"
remove_dir_all = "0.7.0"
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
urlencoding = "2.1.3"
