[package]
name = "cargo-lambda-metadata"
readme = "README.md"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true

[dependencies]
cargo-lambda-remote.workspace = true
cargo_metadata.workspace = true
cargo-options.workspace = true
clap.workspace = true
env-file-reader = "0.3.0"
figment.workspace = true
matchit = "0.8.5"
miette.workspace = true
remove_dir_all = "0.7.0"
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
assertables.workspace = true
tempfile.workspace = true
