[package]
name = "cargo-lambda-metadata"
readme = "README.md"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true

[dependencies]
anyhow = "1.0.98"
cargo-lambda-remote.workspace = true
cargo_metadata.workspace = true
cargo-options.workspace = true
clap.workspace = true
env-file-reader = "0.3.0"
figment.workspace = true
matchit = "0.9.1"
miette.workspace = true
remove_dir_all = "1.0.0"
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
