[package]
name = "cargo-lambda-new"
readme = "README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true

[dependencies]
cargo-lambda-interactive.workspace = true
cargo-lambda-metadata.workspace = true
clap.workspace = true
dunce.workspace = true
liquid = "0.26.0"
miette.workspace = true
regex = "1.5.5"
reqwest.workspace = true
strum.workspace = true
strum_macros.workspace = true
tempfile = "3.3.0"
thiserror.workspace = true
tracing.workspace = true
walkdir = "2.3.2"
zip.workspace = true
