[package]
name = "cargo-lambda-new"
readme = "README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true

[dependencies]
cargo-lambda-interactive.workspace = true
cargo-lambda-metadata.workspace = true
clap.workspace = true
dunce.workspace = true
gix = { version = "0.70.0", default-features = false, features = ["blocking-network-client", "blocking-http-transport-reqwest-rust-tls", "worktree-mutation"] }
indexmap = { version = "2.6.0", features = ["serde"] }
liquid = "0.26.0"
miette.workspace = true
regex = "1.5.5"
reqwest.workspace = true
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
walkdir = "2.3.2"
zip.workspace = true

[dev-dependencies]
assertables.workspace = true
