[package]
name = "cargo-lambda-remote"
readme = "README.md"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config.workspace = true
aws-sdk-lambda.workspace = true
aws-types.workspace = true
clap.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
