[package]
name = "cargo-lambda-remote"
readme = "README.md"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true

[dependencies]
aws-config.workspace = true
aws-sdk-lambda.workspace = true
aws-types.workspace = true
clap.workspace = true
dirs.workspace = true
miette.workspace = true
rustls.workspace = true
rustls-pki-types = "1.10.0"
rustls-platform-verifier = "0.4.0"
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
aws-credential-types.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
