[package]
name = "cargo-lambda-remote"
readme = "README.md"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true

[dependencies]
aws-config.workspace = true
aws-sdk-iam.workspace = true
aws-sdk-lambda.workspace = true
aws-types.workspace = true
clap.workspace = true
dirs.workspace = true
miette.workspace = true
rustls.workspace = true
rustls-pki-types = "1.10.0"
rustls-platform-verifier = "0.6.2"
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
