[package]
name = "cargo-lambda-system"
readme = "README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true

[dependencies]
cargo-lambda-build.workspace = true
cargo-lambda-interactive.workspace = true
clap.workspace = true
miette.workspace = true
tracing.workspace = true
