[package]
name = "cargo-lambda-integration"
publish = false
edition = "2021"
version = "0.1.0"

[[test]]
name = "cargo-lambda"
path = "test/main.rs"

[dev-dependencies]
cargo-test-macro = { git = "https://github.com/rust-lang/cargo" }
cargo-test-support = { git = "https://github.com/rust-lang/cargo" }
dunce = "1.0.3"
snapbox = "0.4.3"