[package]
name = "basic-lambda"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "basic-lambda"
src = "src/main.rs"

[dependencies]
lambda_runtime = "0.5.1"
serde = "1.0.136"
tokio = { version = "1", features = ["macros"] }

[package.metadata.lambda.env]
FOO = "BAR"

[package.metadata.lambda.deploy]
memory = 512
timeout = 60
env_file = ".env.production"
layers = [
    "arn:aws:lambda:us-east-1:xxxxxxxx:layers:layer1",
    "arn:aws:lambda:us-east-1:xxxxxxxx:layers:layer2",
]
tracing = "active"
role = "arn:aws:lambda:us-east-1:xxxxxxxx:iam:role1"
env = { "VAR1" = "VAL1" }
tags = { "organization" = "aws", "team" = "lambda" }

[package.metadata.lambda.build.compiler]
type = "cargo"
subcommand = ["brazil", "build"]
