[workspace]
members = ["crate-1", "crate-2", "crate-3"]

[workspace.metadata.lambda.env]
AWS_REGION = "us-west-2"

[workspace.metadata.lambda.bin.basic-lambda-1.env]
EXTRA = "TRUE"

[workspace.metadata.lambda.watch.router]
"/foo" = "crate-1"
"/bar" = [
    { method = "GET", function = "crate-1" },
    { method = "POST", function = "crate-2" },
]
"/users/{user_id}/posts/{post_id}" = "crate-3"

[profile.release]
lto = true
